--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,8 @@ header {
 }
 
 .header-image {
-    width: 100px; /* Breite des Bildes, nach Bedarf anpassen */
-    height: auto; /* Höhe automatisch, um das Seitenverhältnis beizubehalten */
+    width: 100px; 
+    height: auto; 
     position: absolute; /* Absolute Positionierung */
     top: 2rem; /* Abstand vom oberen Rand */
     right: 2rem; /* Abstand vom rechten Rand */
@@ -33,7 +33,7 @@ header {
 
 #mapContainer {
     padding: 2%; /* Rand um die Karte */
-    background-color: #5D2D9A; /* Blauer Hintergrund */
+    background-color: #5D2D9A; /* Violetter Hintergrund */
     margin: 0 auto; /* Zentriert den Container */
     max-width: 100%; /* Begrenzt die maximale Breite des Containers */
     box-sizing: border-box;
@@ -76,12 +76,6 @@ canvas {
     max-width: 100%; /* Stellt sicher, dass die Leinwand nicht breiter als das `div` ist */
 }
 
-/*h3 {
-    text-align: center; /* Zentriert die Überschriften */
-    /*margin-bottom: 0.5em;  
-} */
-
-
 
 select {
     width: 100%; /* Vollbreite des Dropdown */
@@ -99,8 +93,7 @@ select {
     .startScreen h1 {
         font-family: abhaya Libre, bold; /* Serifenlose Schriftart */
         font-size: 2em; /* Reduziere die Schriftgröße für kleinere Bildschirme */
-        line-height: 1.2;
-        ; /* Kleineren Zeilenabstand für h1 */
+        line-height: 1.2; /* Kleineren Zeilenabstand für h1 */
     }
 
     .startScreen p {
@@ -128,13 +121,11 @@ select {
     .popup-content {
         width: 90%; /* Maximal 90% der Bildschirmbreite auf mobilen Geräten */
         max-width: 300px; /* Höchstens 300px breit */
-        
+        padding: 10px; /* Innenabstand für das Popup */
     }
 
     .popup-content canvas {
         max-width: 100%; /* Stellen Sie sicher, dass das Canvas-Element nicht breiter als sein Container ist */
-        max-width: 350px; /* Höchstens 350px breit */
-        padding: 10px; /* Innenabstand für das Popup */
     }
 }
 
@@ -207,7 +198,8 @@ select {
         padding: 8px;
     }
     .popup-content {
-        width: 70%; /* Maximal 70% der Bildschirmbreite auf Desktops */
+        align-items: center;
+        width: 80%; /* Maximal 70% der Bildschirmbreite auf Desktops */
         max-width: 500px; Höchstens 500px breit
     }
 
@@ -218,7 +210,7 @@ select {
 
 
 .popup-content {
-    padding: 30px; /* Fügen Sie ein wenig Innenabstand hinzu */
+    padding: 5px; /* Fügen Sie ein wenig Innenabstand hinzu */
     background: white; /* Hintergrundfarbe */
     border-radius: 8px; /* Abgerundete Ecken */
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Leichter Schatten für Tiefe */
@@ -229,12 +221,11 @@ select {
 }
 
 .leaflet-popup-content {
-    width: 500px; /* Breite des Popups */
+    width: 300px; /* Breite des Popups */
 } 
 
 .leaflet-popup {
-    width: 500px; /* Breite des Popups */
+    width: 300px; /* Breite des Popups */
 }
 
-/* Additional Media Queries for responsive mode in browser tools */
 
